[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/prefabs/Bowling/Minigame/BowlingMinigame.gd" type="Script" id=1]
[ext_resource path="res://scenes/prefabs/Bowling/Pins/BowlingPin.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/prefabs/Bowling/Monitor/BowlingUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/prefabs/Bowling/Minigame/BowlingPins.gd" type="Script" id=4]

[sub_resource type="PrismMesh" id=18]
size = Vector3( 0.25, 10, 0.05 )

[sub_resource type="SpatialMaterial" id=19]
emission_enabled = true
emission = Color( 0.921569, 1, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="BowlingMinigame" type="Spatial"]
script = ExtResource( 1 )

[node name="ThrowArrow" type="Spatial" parent="."]

[node name="ThrowArrowPivot" type="Spatial" parent="ThrowArrow"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="ThrowArrowMesh" type="MeshInstance" parent="ThrowArrow/ThrowArrowPivot"]
transform = Transform( 1, -1.06581e-14, -4.02341e-21, 0, -4.37114e-08, 1, -1.06581e-14, -1, -4.37114e-08, 0.001178, -0.0156239, -4.79879 )
mesh = SubResource( 18 )
skeleton = NodePath("../../..")
material/0 = SubResource( 19 )

[node name="ThrowArrowCameraPosition" type="Position3D" parent="ThrowArrow"]
transform = Transform( -4.37114e-08, -0.17736, 0.984146, 0, 0.984146, 0.17736, -1, 7.75266e-09, -4.30184e-08, 1.937, 0.776, -8.4669e-08 )

[node name="BowlingBalls" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, -0.17736, 0.984146, 0, 0.984146, 0.17736, -1, 7.75264e-09, -4.30184e-08, 1.93744, 0.775952, -8.46882e-08 )

[node name="ViewPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 3, -1 )

[node name="PointsPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.72278, 3.33966, -0.504455 )

[node name="BowlingPins" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.4809, 0, -0.000700384 )
script = ExtResource( 4 )

[node name="Pins" type="Spatial" parent="BowlingPins"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.4809, 0, 0.000700384 )

[node name="BowlingPin1" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.4809, 0.5, -0.000700384 )

[node name="BowlingPin2" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.9809, 0.5, 0.2993 )

[node name="BowlingPin3" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.9809, 0.5, -0.3007 )

[node name="BowlingPin4" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.4809, 0.5, -0.000700384 )

[node name="BowlingPin5" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.4809, 0.5, 0.5993 )

[node name="BowlingPin6" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.4809, 0.5, -0.6007 )

[node name="BowlingPin7" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.9809, 0.5, 0.2993 )

[node name="BowlingPin8" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.9809, 0.5, -0.3007 )

[node name="BowlingPin9" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.9809, 0.5, -0.9007 )

[node name="BowlingPin10" parent="BowlingPins/Pins" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.9809, 0.5, 0.8993 )

[node name="Positions" type="Spatial" parent="BowlingPins"]

[node name="BowlingPinPosition" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="BowlingPinPosition2" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, 0.3 )

[node name="BowlingPinPosition3" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, -0.3 )

[node name="BowlingPinPosition4" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 0 )

[node name="BowlingPinPosition5" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 0.6 )

[node name="BowlingPinPosition6" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, -0.6 )

[node name="BowlingPinPosition7" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.5, 0.3 )

[node name="BowlingPinPosition8" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.5, -0.3 )

[node name="BowlingPinPosition9" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.5, -0.9 )

[node name="BowlingPinPosition10" type="Position3D" parent="BowlingPins/Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.5, 0.9 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ScreenTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="UIViewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
render_target_v_flip = true

[node name="BowlingUI" parent="UIViewport" instance=ExtResource( 3 )]

[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="ScreenTimer" to="." method="_on_ScreenTimer_timeout"]
